Fix tabs having extra padding in mobile view (#364)

--- a/themes/godotengine/assets/css/main.css
+++ b/themes/godotengine/assets/css/main.css
@@ -928,7 +928,7 @@ pre > code {
   }
 
   .tabs {
-    overflow: scroll;
+    overflow: auto;
   }
 
   .author .date {
